--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: cmm
 Type: Package
 Title: Categorical Marginal Models
-Version: 0.1
-Date: 2009-05-26
+Version: 0.2
+Date: 2010-03-29
 Author: Wicher Bergsma and Andries van der Ark
 Maintainer: Wicher Bergsma <W.P.Bergsma@lse.ac.uk>
 Description: Quite extensive package for the estimation of marginal
         models for categorical data.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2009-06-03 08:23:19 UTC; a
+Packaged: 2010-03-29 14:48:58 UTC; Avdrark
 Repository: CRAN
-Date/Publication: 2009-06-03 17:31:22
+Date/Publication: 2010-04-02 17:07:49
