--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: cmm
 Type: Package
 Title: Categorical Marginal Models
-Version: 0.2
-Date: 2010-03-29
+Version: 0.3
+Date: 2011-01-26
 Author: Wicher Bergsma and Andries van der Ark
 Maintainer: Wicher Bergsma <W.P.Bergsma@lse.ac.uk>
 Description: Quite extensive package for the estimation of marginal
         models for categorical data.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2010-03-29 14:48:58 UTC; Avdrark
+Packaged: 2011-02-05 12:43:41 UTC; Andries
 Repository: CRAN
-Date/Publication: 2010-04-02 17:07:49
+Date/Publication: 2011-02-07 17:06:47
